--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "next-with-apollo": "^3.1.3",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
+    "react": "16.8.6",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
     "react-dom": "^16.5.2",
