--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sick-fits-frontend",
+  "name": "food-chain-frontend",
   "version": "1.0.0",
-  "description": "Sick Fits! An example React, GraphQL, Next and Apollo",
+  "description": "Frontend for Food Chain Magnate",
   "main": "index.js",
   "scripts": {
     "dev": "next -p 7777",
@@ -25,22 +25,23 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "lodash.debounce": "^4.0.8",
-    "next": "^7.0.0",
+    "next": "^9.2.1",
     "next-with-apollo": "^3.1.3",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
-    "react": "16.8.6",
+    "react": "^16.12.0",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.12.0",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
-    "styled-components": "^5.0.0",
+    "styled-components": "^4.0.0",
     "waait": "^1.0.2"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-styled-components": "^1.8.0",
     "casual": "^1.5.19",
     "enzyme-to-json": "^3.3.4",
     "graphql-tools": "^4.0.0",
