--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
@@ -29,12 +31,12 @@
     "graphql-tag": "^2.9.2",
     "lodash.debounce": "^4.0.8",
     "next": "^9.2.1",
-    "next-with-apollo": "^3.1.3",
+    "next-with-apollo": "^3.4.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.12.0",
     "react-adopt": "^0.6.0",
-    "react-apollo": "^2.2.1",
+    "react-apollo": "^3.0.0",
     "react-dom": "^16.12.0",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
